--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <div id="vue-app">
       This is your name, isn't it?, {{name}}
       You want me to type something using vue {{print("something")}}
+
+      <p>What ever you type in the below box will be visible<p>
+        <input type="text" v-model="dataBinding"/>
+        <span>{{dataBinding}}</span>
+
+
+
       <p>Let's try some events</p>
       <p>Click to add <button v-on:click="add(2)">Click</button></p>
       <p>Double Click to subtract <button @dblclick="subtract(1)">Double click</button>
