--- a/index.html
+++ b/index.html
@@ -20,9 +20,19 @@
       <p>Click to add <button v-on:click="add(2)">Click</button></p>
       <p>Double Click to subtract <button @dblclick="subtract(1)">Double click</button>
       </p>
+
       <p>
         <h4>{{value}}</h4>
       </p>
+
+      <div v-if="false">
+        This won't be shown
+      </div>
+
+      <!--<ul>-->
+        <li v-for="i in employeeName">{{i.name}}</li>
+      <!--</ul>-->
+
 
       <canvas id="canvas" @mouseover="getCordinates" width="300" height="300" style="border:1px solid black;"></canvas>
       <p>X : {{x}} Y : {{y}}</p>
